--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="statusbar">Statusbar</string>
     <string name="general">General</string>
     <string name="toggles_layout">Toggles</string>
-    <!--string name="clock">Clock</string-->
+    <string name="clock">Clock</string>
     <string name="battery">Battery</string>
     <string name="nav_bar">Navigation bar</string>
     <string name="tools">Tools</string>
@@ -28,7 +28,7 @@
     <string name="header_summary_led">Change default settings for Android to use</string>
     <string name="header_summary_general">Settings button behavior</string>
     <string name="header_summary_toggles">Customize toggles</string>
-	<!--string name="header_summary_clock">Clock location, AM/PM style, color</string-->
+	<string name="header_summary_clock">Clock location, AM/PM style, color</string>
 	<string name="header_summary_weather">Enable/disable, set custom location or network, and interval</string>
 	
     <string name="advanced_settings">Advanced settings</string>
@@ -256,14 +256,17 @@
     <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
     
 
-    <!-- Statusbar | Clock 
+
+    <!-- Statusbar | Clock -->
     <string name="clock_title_enable">Clock style</string>
     <string name="title_clock_ampm_entries">AM/PM style</string>
     <string name="colors">Colors</string>
     <string name="clock_color_title">Clock color</string>
     <string name="reset_color_title">Reset color</string>
     <string name="enable_alarm_title">Enable alarm icon</string>
-    <string name="enable_alarm_summary">After disabling/enabling, you must toggle your alarms for it to show up again. Or reboot.</string>-->
+    <string name="enable_alarm_summary">After disabling/enabling, you must toggle your alarms for it to show up again. Or reboot.</string>
+    <string name="enable_clock_weekday">Day of the week</string>
+    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
 
     <!-- Statusbar | Toggles -->
     <string name="toggle_style_title">Toggle style</string>
@@ -271,7 +274,7 @@
 
     <string name="alternate_button_layout_title">Alternate toggles</string>
     <string name="alternate_button_layout_summary">Use Toggle Buttons instead of switches for your toggles.</string>
-    
+
     <string name="enabled_toggles_title">Enabled toggles</string>
     <string name="enabled_toggles_summary">Choose toggles to display</string>
     <string name="toggles_order_title">Toggle order</string>
